# allocmap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/agents/: architect.md  developer.md  devops.md  doc.md  orchestrator.md  reviewer.md  tester.md
.claude/commands/: iterate.md  push.md  review.md
.claude/hooks/: post-iteration.sh
.claude/state/: architect_report_iter01.md  checkpoint.md  dev_p2_iter03.md  deva_p2_iter02.md  deva_report.md  devb_p2_iter02.md  devb_report.md  devc_report.md  devd_report.md  deve_report.md  devf_report.md  devg_report.md  devops_report_iter01.md  devp2a_report.md  devp2b_report.md  git_connectivity_test.txt  iteration_state.json  tester_p2_iter01.md  tester_p2_iter02.md  tester_p2_iter03.md
.github/workflows/: ci.yml
crates/allocmap-cli/: Cargo.toml
crates/allocmap-cli/src/: cli.rs  error.rs  main.rs  util.rs
crates/allocmap-cli/src/cmd/: attach.rs  diff.rs  mod.rs  replay.rs  run.rs  snapshot.rs
crates/allocmap-cli/tests/: integration_tests.rs
crates/allocmap-core/: Cargo.toml
crates/allocmap-core/src/: error.rs  lib.rs  recording.rs  sample.rs
crates/allocmap-preload/: Cargo.toml
crates/allocmap-preload/src/: bump_alloc.rs  hooks.rs  ipc.rs  lib.rs
crates/allocmap-ptrace/: Cargo.toml
crates/allocmap-ptrace/src/: attach.rs  backtrace.rs  error.rs  lib.rs  macos_sampler.rs  sampler.rs  symbols.rs
crates/allocmap-tui/: Cargo.toml
crates/allocmap-tui/src/: app.rs  events.rs  flamegraph.rs  hotspot.rs  lib.rs  theme.rs  timeline.rs
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docs/: ec2_startup_guide.md  lesson_learned.md  progress.md  structure.md  tutorial.md
docs/review_reports/: review_report_phase1_iter01.md  review_report_phase2_iter01.md  review_report_phase2_iter02.md  review_report_phase2_iter03.md
tests/target_programs/alloc_c/: alloc_c.c
tests/target_programs/alloc_cpp/: alloc_cpp.cpp
tests/target_programs/alloc_go/: alloc_go.go
tests/target_programs/leak_linear/: Cargo.toml
tests/target_programs/leak_linear/src/: main.rs
tests/target_programs/multithreaded/: Cargo.toml
tests/target_programs/multithreaded/src/: main.rs
tests/target_programs/spike_alloc/: Cargo.toml
tests/target_programs/spike_alloc/src/: main.rs
tests/target_programs/steady_state/: Cargo.toml
tests/target_programs/steady_state/src/: main.rs
