[workspace]
members = [
    "crates/allocmap-core",
    "crates/allocmap-ptrace",
    "crates/allocmap-preload",
    "crates/allocmap-tui",
    "crates/allocmap-cli",
    "tests/target_programs/spike_alloc",
    "tests/target_programs/leak_linear",
    "tests/target_programs/steady_state",
    "tests/target_programs/multithreaded",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["handsomevictor"]
repository = "https://github.com/handsomevictor/allocmap"

[workspace.dependencies]
# 错误处理
anyhow = "1"
thiserror = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# 异步
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# 颜色输出
owo-colors = "4"
colored = "2"

# 符号解析
addr2line = "0.22"
gimli = "0.31"
object = "0.36"
rustc-demangle = "0.1"

# Linux ptrace
[workspace.dependencies.nix]
version = "0.29"
features = ["ptrace", "process", "signal", "mman"]
