[package]
name = "allocmap-ptrace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
allocmap-core = { path = "../allocmap-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Linux only 依赖
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
libc = { workspace = true }
addr2line = { workspace = true }
gimli = { workspace = true }
object = { workspace = true }
rustc-demangle = { workspace = true }
